--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     },
     "dependencies": {
         "dev": "^0.1.3",
+        "remixicon": "^2.5.0",
         "scrollreveal": "^4.0.9",
         "webpack": "^5.70.0",
         "webpack-stream": "^7.0.0"
